k8s/service-siwali.yaml
apiVersion: v1
kind: Service
metadata:
  name: siwali-service
  namespace: siwali
spec:
  type: NodePort
  selector:
    app: siwali-app
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      nodePort: 30082
