k8s/ingress-siwali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: siwali-ingress
  namespace: siwali
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: siwali-service
                port:
                  number: 8000
